# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.Docker.md  compose.yaml  spec.yaml
configuration/: base.yaml
migrations/: 20241005165847_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_test.rs
