[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
once_cell = "1"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "0.2.0-alpha.6" }
reqwest = "0.11"
actix-web = "4"
tokio-util = { version = "0.7.11", features = ["compat"] }
async-std = "1.12.0"
sqlx-cli = { version = "0.8.2", features = ["postgres"] }
serde = "1.0.115"
config = "0.14.0"
chrono = "0.4.38"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"

[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]


[dependencies.uuid]
version = "1.11.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
